force-app/main/default/objects/Auth0ConnectionSettings__c/Auth0ConnectionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Connection Details for Auth0 Rest Callouts in Auth0Connection Apex Class.</description>
    <label>Auth0ConnectionSettings</label>
</CustomObject>