force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Audience__c.field-meta.xml
<CustomField>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>