force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Client_ID__c.field-meta.xml
<CustomField>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>