force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>