force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Connection__c.field-meta.xml
<CustomField>
        <fullName>Connection__c</fullName>
        <label>Connection</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>