force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Default_Password__c.field-meta.xml
<CustomField>
        <fullName>Default_Password__c</fullName>
        <label>Default Password</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>