force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Domain__c.field-meta.xml
<CustomField>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>