force-app/main/default/objects/Auth0ConnectionSettings__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>